objects/AiGroundingFileRef_Home__dll.object
<CustomObject>
    <fields>
        <fullName>CreatedById__c</fullName>
        <label>Created By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilePath__c</fullName>
        <label>File Path</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileSize__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GroundingSourceId__c</fullName>
        <label>AI Grounding Source ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>AI Grounding File Reference ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobIdentifier__c</fullName>
        <label>Job Identifier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_FilePath__c</fullName>
        <label>KQ_FilePath</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <label>Last Modified By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>AI Grounding File Reference Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>Owner ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>SfdcOrganizationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>System Modstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>